opam-version: "2.0"
version: "0.1.0"
synopsis: "The formally verified KBB2017 protocol for 1-on-1 secure conversations similar to the Signal Protocol"
description: """
Dirsp is a short form for Diskuv Implementations of Research Security Protocols.
The [dirsp-exchange-kbb2017] library implements the Kobeissi, Bhargavan and Blanchet 2017
protocol that is a variant of the Signal Protocol v3 and has been verified
using two complementary formal methodologies.
"""
maintainer: "opensource+dirsp-exchange-kbb2017@support.diskuv.com"
authors: "[Diskuv, Inc. <opensource+dirsp-exchange-kbb2017@support.diskuv.com>]"
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dirsp-exchange"
bug-reports: "https://github.com/diskuv/dirsp-exchange/issues"
dev-repo: "git+https://github.com/diskuv/dirsp-exchange.git"
tags: ["org:diskuv"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"               {>= "4.08.0"}
  "dune"                {>= "2.0.0"}
  "dirsp-proscript"     {>= "0.1.0"}
]
