opam-version: "2.0"
version: "0.1.0"
synopsis: "Published protocols for the authenticated message exchange"
description: """
Dirsp is a short form for Diskuv Implementations of Research Security Protocols.
The [dirsp-exchange] library is a no-op as of May 2021, but will have high-level
APIs that can stitch together the sub-libraries like [dirsp-exchange-kbb2017].
These [dirsp-exchange-*] sublibraries are implementations of research/academic
protocols published in the field of authenticated message exchange.
"""
maintainer: "opensource+dirsp-exchange@support.diskuv.com"
authors: "[Diskuv, Inc. <opensource+dirsp-exchange@support.diskuv.com>]"
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dirsp-exchange"
bug-reports: "https://github.com/diskuv/dirsp-exchange/issues"
dev-repo: "git+https://github.com/diskuv/dirsp-exchange.git"
tags: ["org:diskuv"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"                  {>= "4.08.0"}
  "dune"                   {>= "2.0.0"}
  "dirsp-exchange-kbb2017" {>= "0.1.0"}
]
